k8s/invokeai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invokeai
  namespace: ai
spec:
  selector:
    app: invokeai
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 32111
  type: NodePort
