k8s/invokeai/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invokeai-gateway
  namespace: ai
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "invokeai.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: invokeai
      port: 9090
